--- a/MicroBlog/MicroBlog.csproj
+++ b/MicroBlog/MicroBlog.csproj
@@ -90,7 +90,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlogModule.cs" />
-    <Compile Include="Post.cs" />
+    <Compile Include="Interface\IPostRepository.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
