--- a/MicroBlog.Tests/packages.config
+++ b/MicroBlog.Tests/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsQuery" version="1.3.3" targetFramework="net45" />
+  <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="Dapper" version="1.42" targetFramework="net45" />
-  <package id="Moq" version="4.2.1506.2515" targetFramework="net45" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
+  <package id="Nancy.Authentication.Basic" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Testing" version="1.2.0" targetFramework="net45" />
   <package id="xunit" version="2.0.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
