--- a/MicroBlog/MicroBlog.csproj
+++ b/MicroBlog/MicroBlog.csproj
@@ -96,6 +96,7 @@
     <Compile Include="BlogModule.cs" />
     <Compile Include="Interface\IPostRepository.cs" />
     <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\UserIdentity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
