--- a/MicroBlog/MicroBlog.csproj
+++ b/MicroBlog/MicroBlog.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Models\Post.cs" />
     <Compile Include="Models\UserIdentity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\PostRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <PropertyGroup>
