Some layout bits and links for displaying

--- a/MicroBlog.Web/MicroBlog.Web.csproj
+++ b/MicroBlog.Web/MicroBlog.Web.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="css\bloglist.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
