still more messing with react/require. last try.

--- a/MicroBlog.Web/MicroBlog.Web.csproj
+++ b/MicroBlog.Web/MicroBlog.Web.csproj
@@ -74,7 +74,7 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="css\bloglist.css" />
-    <Content Include="Scripts\app.js" />
+    <None Include="Scripts\main.jsx" />
     <Content Include="Scripts\r.js" />
     <Content Include="Scripts\require.js" />
     <Content Include="Scripts\requireconfig.js" />
@@ -83,9 +83,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\lib\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
