--- a/MicroBlog/packages.config
+++ b/MicroBlog/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="Dapper" version="1.40" targetFramework="net45" />
   <package id="Dapper.Contrib" version="1.43" targetFramework="net45" />
+  <package id="Linq2Rest" version="3.3.2.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Nancy" version="1.2.0" targetFramework="net45" />
   <package id="Nancy.Authentication.Basic" version="1.2.0" targetFramework="net45" />
+  <package id="Nancy.OData" version="1.1.0" targetFramework="net45" />
   <package id="Nancy.Owin" version="1.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.97.0" targetFramework="net45" />
