--- a/MicroBlog.Web/MicroBlog.Web.csproj
+++ b/MicroBlog.Web/MicroBlog.Web.csproj
@@ -71,6 +71,7 @@
     <Content Include="edit.html" />
     <Content Include="index.html" />
     <Content Include="css\bloglist.css" />
+    <Content Include="view.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
