trying to move riot tag external.

--- a/MicroBlog.Web/MicroBlog.Web.csproj
+++ b/MicroBlog.Web/MicroBlog.Web.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="riot-blogpostform.tag" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
