--- a/MicroBlog/Web.config
+++ b/MicroBlog/Web.config
@@ -12,7 +12,9 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
