--- a/MicroBlog.React/MicroBlog.React.csproj
+++ b/MicroBlog.React/MicroBlog.React.csproj
@@ -68,6 +68,7 @@
     <Content Include="css\bloglist.css" />
     <Content Include="edit.html" />
     <Content Include="index.html" />
+    <Content Include="js\jsx\blogEdit.js" />
     <Content Include="js\jsx\blogItem.js" />
     <Content Include="js\lib\JSXTransformer.js" />
     <Content Include="js\lib\react-with-addons.js" />
